--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Story Feedback</title>
-    <link rel="stylesheet" href="styles/feed.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <main>
@@ -25,7 +25,7 @@
                     </select>
                 </p>
                 <p class="message">Share your feedback Message :</p>
-                <textarea name="message" id="message" cols="20" rows="4" placeholder="Write your message......"></textarea>
+                <textarea name="message" id="message" cols="20" rows="4" placeholder="Write your message...."></textarea>
                 <br>
                 <button type="reset" id="reset">Reset</button>
                 <button type="submit">Submit</button>
